// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with checked switch 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    checked={true}
    collapsable={false}
    disabled={false}
    style={
      {
        "backgroundColor": "rgba(152, 152, 166, 1)",
        "borderRadius": 9999,
        "display": "flex",
        "height": 24,
        "justifyContent": "center",
        "width": 48,
      }
    }
  >
    <View
      bgColor="#FFFFFF"
      borderRadius={9999}
      checked={true}
      collapsable={false}
      disabled={false}
      elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
      height={20}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "height": 20,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
          "transform": [
            {
              "translateX": 2,
            },
          ],
          "width": 20,
        }
      }
      width={20}
    />
  </View>
</View>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with default switch 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    checked={false}
    collapsable={false}
    disabled={false}
    style={
      {
        "backgroundColor": "rgba(216, 56, 94, 1)",
        "borderRadius": 9999,
        "display": "flex",
        "height": 24,
        "justifyContent": "center",
        "width": 48,
      }
    }
  >
    <View
      bgColor="#FFFFFF"
      borderRadius={9999}
      checked={false}
      collapsable={false}
      disabled={false}
      elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
      height={20}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "height": 20,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
          "transform": [
            {
              "translateX": 26,
            },
          ],
          "width": 20,
        }
      }
      width={20}
    />
  </View>
</View>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with disabled and checked switch 1`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    checked={true}
    collapsable={false}
    disabled={true}
    style={
      {
        "backgroundColor": "#F5F5FA",
        "borderRadius": 9999,
        "display": "flex",
        "height": 24,
        "justifyContent": "center",
        "width": 48,
      }
    }
  >
    <View
      bgColor="#FFFFFF"
      borderRadius={9999}
      checked={true}
      collapsable={false}
      disabled={true}
      elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
      height={20}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "height": 20,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
          "transform": [
            {
              "translateX": 2,
            },
          ],
          "width": 20,
        }
      }
      width={20}
    />
  </View>
</View>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with disabled switch 1`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    checked={false}
    collapsable={false}
    disabled={true}
    style={
      {
        "backgroundColor": "#F5F5FA",
        "borderRadius": 9999,
        "display": "flex",
        "height": 24,
        "justifyContent": "center",
        "width": 48,
      }
    }
  >
    <View
      bgColor="#FFFFFF"
      borderRadius={9999}
      checked={false}
      collapsable={false}
      disabled={true}
      elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
      height={20}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "height": 20,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
          "transform": [
            {
              "translateX": 26,
            },
          ],
          "width": 20,
        }
      }
      width={20}
    />
  </View>
</View>
`;
